[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ally-demo-python"
version = "0.2.0"
description = "Reference integration for Ally (a11y-assist, a11y-lint, a11y-ci)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com"}
]
keywords = [
    "a11y",
    "accessibility",
    "cli",
    "demo",
    "reference",
    "ally",
    "error-messages",
    "assistive-technology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "a11y-assist",
    "a11y-lint",
]

[project.scripts]
demo-cli = "demo_cli.cli:main"

[project.urls]
Homepage = "https://github.com/mcp-tool-shop/ally-demo-python"
Repository = "https://github.com/mcp-tool-shop/ally-demo-python"
Issues = "https://github.com/mcp-tool-shop/ally-demo-python/issues"

[tool.setuptools.packages.find]
include = ["demo_cli*"]
